2007-06-25  Arno Rehn  <arno@arnorehn.de>

	* Made a seperate assembly out of the QScintilla namespace.

2007-06-19  Richard Dale  <rdale@foton.es>

	* Moved the QScintilla classes to a QScintilla namespace instead of 
	  Qyoto.QScintilla as Qyoto should really just contain the Qt classes
	* #ifdef'd the code to register a callback for events so the code
	  compiles with Qt 4.2.x

2007-06-23  Arno Rehn  <arno@arnorehn.de>

	* Added classes for QScintilla2
	* Added a marshaller for QList<QWizard::WizardButton>
	* Added FindSmokeQt.cmake (might be useful when someone wants to create a standalone
	  package)
	* Added a LINK_DIRECTORIES rule in CMakeLists.txt

2007-06-21  Arno Rehn  <arno@arnorehn.de>

	* When the assembly is installed, a symlink is created in the "2.0" directory, so
	  it can be directly referenced from gmcs with -r:qt-dotnet

2007-06-19  Richard Dale  <rdale@foton.es>

	* Added the missing QUiLoader class
	* Improved the layout of the README, and made some changes to the text

2007-06-18  Arno Rehn  <arno@arnorehn.de>

	* Update CSharpMacros.cmake to work currectly with relative paths and improved
	  the build-comments a bit.

2007-06-18  Richard Dale  <rdale@foton.es>

	* Removed the various commented out QAbstractItemModel methods as they
	  aren't needed
	* Fix the code generation for QWizard.cs so it has a C# List for the
	  'const QList<QWizard::WizardButton>&', although it doesn't have a
	  corresponding marshaller yet

2007-06-13  Richard Dale  <rdale@foton.es>

	* Finished fixing the virtual method callback code
	* Removed a memory leak from the 'int&' marshaller
	* Fixed some other minor problems reported by valgrind
	* Don't garbage collect QGraphicsItem instance for now

2007-06-12  Richard Dale  <rdale@foton.es>

	* When the stack was allocated for a virtual method callback, an entry 
	  wasn't being included for the reply value
	* When the arguments for a virtual method callback were copied to the
	  C# arg stack, they were off by one